overlay z-index mobile fix

--- a/source/_patterns/02-organisms/00-global/02-basic-layout.scss
+++ b/source/_patterns/02-organisms/00-global/02-basic-layout.scss
@@ -56,7 +56,7 @@
         top:0;
         bottom:0;
         background:transparentize($colorBlack, 0.5);
-        z-index:99;
+        z-index:5;
       }
     }
     .header {
